spade-tests/src/snapshots/spade_tests__integration__trait_tests__instantiating_pipeline_methods_fails_gracefully.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    pipeline(10) a(self) -> bool {true}
}

fn t(x: X) -> bool {
    x.a()
}


error: Wrong number of pipeline stages
  ┌─ testinput:4:34
  │
4 │     pipeline(10) a(self) -> bool {true}
  │              --                  ^^^^^^ Found no stage here
  │              │                    
  │              10 stages specified here


