spade-tests/src/snapshots/spade_tests__integration__trait_tests__method_resolution_errors_gracefully_on_generic_types.snap
---
source: spade-tests/src/integration.rs
snapshot_kind: text
---
impl [bool; 8] {
    fn method(self) {}
}

fn test() {
    [0; 8].method()
}


error: Type of expression is not fully known
  ┌─ testinput:6:5
  │
6 │     [0; 8].method()
  │     ^^^^^^ The type of this expression is not fully known
  │
  = note: Found incomplete type: [Number<_>; 8]
