spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_impls_of_same_method_is_error.snap
---
source: spade-tests/src/integration.rs
---
struct A {}

impl A {
    fn a(self) -> bool {
        true
    }

    fn a(self) -> bool {
        false
    }
}


error: Multiple definitions of a
  ┌─ testinput:8:8
  │  
4 │ ╭     fn a(self) -> bool {
5 │ │         true
6 │ │     }
  │ ╰─────' Previous definition here
7 │   
8 │       fn a(self) -> bool {
  │          ^ a is defined multiple times
